# simple-irc-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md
benches/: msg_split.rs
src/: error.rs  escaped.rs  lib.rs  message.rs
tests/: mod.rs
